update code for new Java and DL4J versions